docs: обновлена документация API (Swagger)
